one for-loop to replace answers

--- a/myQuiz.html
+++ b/myQuiz.html
@@ -8,9 +8,9 @@
 <body>
     <header class="quizTitle">Try your luck!</header>
     <article class="question">
-        <header class="questionText">Question?</header>
+        <header id="questionText">Question?</header>
         <form id="answers">
-            <ul class="answerList">
+            <ul id="answerList">
                 <li>
                     <input id="ansA" type="radio" name="placeholder" value="a">
                     <label for="ansA">Answer A</label>
@@ -31,5 +31,6 @@
             <input type="submit" value="Next">
         </form>
     </article>
+    <script src="quiz.js"></script>
 </body>
 </html>
