added next question event on submit button

--- a/myQuiz.html
+++ b/myQuiz.html
@@ -8,7 +8,7 @@
 <body>
     <header class="quizTitle">Try your luck!</header>
     <article class="question">
-        <header id="questionText">Question?</header>
+        <header id="questionText" data-qNum="0">Question?</header>
         <form id="answers">
             <ul id="answerList">
                 <li>
