added basic client-side validation and created Back button feature

--- a/myQuiz.html
+++ b/myQuiz.html
@@ -28,7 +28,8 @@
                     <label for="ansD">Answer D</label>
                 </li>
             </ul>
-            <input type="submit" value="Next">
+            <button id="back" type="button">Back</button>
+            <input id="next" type="submit" value="Next">
         </form>
     </article>
     <script src="quiz.js"></script>
