--- a/myQuiz.html
+++ b/myQuiz.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8"/>
     <title>Brian's Quiz</title>
     <link rel="stylesheet" href="main.css"/>
+    <script src="jquery-1.10.2.min.js"></script>
 </head>
 <body>
     <header class="quizTitle">Try your luck!</header>
