--- a/myQuiz.html
+++ b/myQuiz.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <header class="quizTitle">Try your luck!</header>
-    <article class="question">
+    <div class="question">
         <header id="questionText" data-qNum="0">Question?</header>
-        <form id="answers">
+        <form id="answers" name="answers">
             <ul id="answerList">
                 <li>
                     <input id="ansA" type="radio" name="placeholder" value="a">
@@ -32,7 +32,7 @@
             <button id="back" type="button">Back</button>
             <input id="next" type="submit" value="Next">
         </form>
-    </article>
+    </div>
     <script src="quiz.js"></script>
 </body>
 </html>
