--- a/myQuiz.html
+++ b/myQuiz.html
@@ -33,6 +33,7 @@
             <input id="next" type="submit" value="Next">
         </form>
     </div>
+    <script type="text/javascript" src="questions.json"></script>
     <script src="quiz.js"></script>
 </body>
 </html>
