--- a/myQuiz.html
+++ b/myQuiz.html
@@ -7,9 +7,23 @@
     <script src="jquery-1.10.2.min.js"></script>
 </head>
 <body>
-    <header class="quizTitle">Try your luck!</header>
+  <header>
+    <h1 class="quizTitle">Try your luck!</h1>
+    <div id="signIn">
+      <form id="login" name="login">
+	<input id="uname" type="text" value="Username...">
+	<input id="pword" type="text" value="Password...">
+	<input id="loginBtn" type="submit" value="Sign In">
+      </form>
+      <form id="createAccount" name="createAccount">
+	<input id="uname" type="text" value="Username...">
+	<input id="pword" type="text" value="Password...">
+	<input id="createAccountBtn" type="submit" value="Create Account">
+      </form>
+    </div>
+  </header>
     <div class="question">
-        <header id="questionText" data-qNum="0">Question?</header>
+        <h2 id="questionText" data-qNum="0">Question?</h2>
         <form id="answers" name="answers">
             <ul id="answerList">
                 <li>
