--- a/myQuiz.html
+++ b/myQuiz.html
@@ -11,12 +11,13 @@
   <nav class="navbar navbar-default" role="navigation">
      <div class="container">
         <a class="navbar-brand">Brian's Quiz</a>
-        <a data-toggle="modal" href="#createAccountModal" class="navbar-right">Create Account</a>
-        <div id="signIn">
-          <form class="navbar-form navbar-right" id="login" name="login">
+
+        <div id="signIn" class="navbar-right">
+          <form class="navbar-form " id="login" name="login">
             <input id="uname" type="text" placeholder="Username...">
             <input id="pword" type="password" placeholder="Password...">
             <input id="loginBtn" class="btn btn-xs btn-default" type="submit" value="Sign In">
+            <a data-toggle="modal" href="#createAccountModal" >Create Account</a>
           </form>
         </div>
     </div>
@@ -65,14 +66,17 @@
                 <div class="modal-body">
                     <p>Create an account to track your highest score and show up on the leaderboard.</p>
                     <p>Passwords aren't secure, so don't... like... use your banking password.</p>
-                    <form class="" id="createAccount" name="createAccount">
+                    <form class="" id="createAccount" name="createAccount" role="form">
+		      <div class="form-group">
+			<label for="uname">Username</label>
                         <input id="uname" type="text" placeholder="Username...">
+		      </div>
+		      <div class="form-group">
+			<label for="pword">Password</label>
                         <input id="pword" type="password" placeholder="Password...">
+		      </div>
+		      <button id="createAccountBtn" type="submit" class="btn btn-primary">Save</button>
                     </form>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                    <button id="createAccountBtn" type="button" class="btn btn-primary">Submit</button>
                 </div>
             </div>
         </div>
