--- a/myQuiz.html
+++ b/myQuiz.html
@@ -6,6 +6,7 @@
     <title>Brian's Quiz</title>
     <script src="jquery-1.10.2.min.js"></script>
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
   <nav class="navbar navbar-default" role="navigation">
@@ -22,7 +23,7 @@
         </div>
     </div>
   </nav>
-  <div class="container">
+  <div class="container" id="main">
     <div class="question">
         <h3 id="questionText" data-qNum="0">Question?</h3>
         <form id="answers" name="answers" role="form">
