added multi-quiz feature and reformatted some tabs/spaces

--- a/myQuiz.html
+++ b/myQuiz.html
@@ -61,8 +61,8 @@
                             </div>
                         </div>
                         <div class="col-md-4">
-                            <input class="btn btn-sm btn-primary pull-right" id="next" type="submit" value="Next">
-                            <button class="btn btn-sm btn-default pull-left" id="back" type="button">Back</button>
+                            <input class="btn btn-sm btn-primary pull-right" id="next0" type="submit" value="Next">
+                            <button class="btn btn-sm btn-default pull-left" id="back0" type="button">Back</button>
                         </div>
                     </form>
                 </div>
@@ -97,6 +97,10 @@
                                 Answer D
                             </label>
                         </div>
+                    </div>
+                    <div class="col-md-4">
+                        <input class="btn btn-sm btn-primary pull-right" id="next1" type="submit" value="Next">
+                        <button class="btn btn-sm btn-default pull-left" id="back1" type="button">Back</button>
                     </div>
                 </form>
             </div>
