made brand link in top nav link to home page

--- a/myQuiz.html
+++ b/myQuiz.html
@@ -11,7 +11,7 @@
 <body>
 <nav class="navbar navbar-default" role="navigation">
     <div class="container">
-        <a class="navbar-brand">Brian's Quiz</a>
+        <a class="navbar-brand" href="/myQuiz.html">Brian's Quiz</a>
 
         <div id="signIn" class="navbar-right">
             <form class="navbar-form " id="login" name="login">
